tests/Asm/positive/test012.jva
-- temporary stack

function main() {
  push 1;
  tsave {
    push 2;
    save {
      push tmp[1];
    };
    push tmp[0];
    add;
    tsave {
      push tmp[1];
      push tmp[1];
      mul;
      tsave {
        push tmp[2];
        push 2;
        add;
        tsave {
          push tmp[2];
          push tmp[3];
          add;
          tsave {
            push tmp[2];
            push tmp[3];
            push tmp[4];
            add;
            add;
            ret;
          };
        };
      };
    };
  };
}
