tests/Asm/negative/vtest001.jva
-- wrong stack height on exit

function main () {
  push 1;
  push 2;
  ret;
}
